--- a/style.css
+++ b/style.css
@@ -3,3 +3,17 @@ body {
   padding: 0;
   margin: 0;
 }
+
+.navigaton {
+  width: 20rem;
+  background-color: aqua;
+  position: absolute;
+  top: 0;
+  height: 100%;
+  z-index: 10000;
+}
+
+#globeViz {
+  position: absolute;
+  top: 0;
+}
