--- a/style.css
+++ b/style.css
@@ -6,11 +6,14 @@ body {
 
 .navigaton {
   width: 20rem;
-  background-color: rgb(25, 29, 66);
+  background-color: #000011;
   position: absolute;
   top: 0;
   height: 100%;
   z-index: 10000;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 body {
   overflow: hidden;
@@ -19,5 +22,29 @@ body {
   position: absolute;
   top: 0;
   left: 10rem;
-  color: rgb(16, 194, 0);
+  color: rgb(21, 255, 0);
+}
+.card {
+  height: 5rem;
+  width: 90%;
+  background-color: rgb(175, 193, 214);
+  border-radius: 5px;
+  margin-top: 1rem;
+  color: white;
+  position: relative;
+}
+.card__where {
+  position: absolute;
+  top: 1rem;
+  left: 1rem;
+}
+.card__when {
+  position: absolute;
+  bottom: 1rem;
+  left: 1rem;
+}
+.card__mag {
+  position: absolute;
+  bottom: 1rem;
+  right: 4rem;
 }
