--- a/style.css
+++ b/style.css
@@ -52,3 +52,57 @@ span {
   visibility: hidden;
   display: none;
 }
+
+.upperNav {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  text-align: center;
+  grid-template-rows: 1fr, 2rem, 1fr;
+  grid-gap: 0.5rem;
+  justify-content: center;
+  font-size: 0.8rem;
+  margin-top: 2rem;
+  width: 90%;
+  height: 5rem;
+}
+.upperNavItem {
+  margin-top: 0.3rem;
+}
+.UpperNavLinks {
+  text-decoration: none;
+  border: 1px solid white;
+
+  border-radius: 9px;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+  background-color: #000011;
+}
+.UpperNavLinks:hover {
+  color: #000011;
+  background-color: white;
+}
+.sortBy {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 0.3rem;
+  border: 1px solid black;
+  border-radius: 9px;
+  border: 1px solid white;
+
+  border-radius: 9px;
+  color: white;
+}
+.sortByText {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: 900;
+
+  border-radius: 9px;
+  color: white;
+}
