--- a/style.css
+++ b/style.css
@@ -110,9 +110,20 @@ span {
 }
 
 .pages {
-  width: 90%;
+  width: 70%;
   height: 2rem;
-  background-color: blue;
   position: absolute;
   bottom: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  color: white;
+  font-weight: 900;
+}
+.nextPage {
+  cursor: pointer;
+}
+
+.previousePage {
+  cursor: pointer;
 }
